# preHackathon_jobReq_prototype

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  Vagrantfile  claude_implementation_plan.md  codex_implementation_plan  docker-compose.yml  implementation_plan.md  pyproject.toml  schema_check.py
.claude/: settings.local.json
.claude/agents/: neo4j.md  pipeline.md
.github/workflows/: ci.yml
data/: README.md
docs/: README.md
docs/datasets/: README.md  job-postings-text.md  licenses-and-ethics.md  people-and-skills.md  role-history.md  schema-notes.md
docs/discoveries/: 01-environment-and-connections.md  02-sklz-neo4j-schema.md  03-codebase-architecture.md  04-synthetic-vs-real-data-gap.md  05-hackathon-strategy-options.md  06-local-vagrant-runtime-validation.md  (+2 more)
frontend/: README.md  package-lock.json  package.json  playwright.config.ts
meeting_docs/: Hackathon Diagram 3.drawio  ethan_mac_meeting_images.docx  ethan_mac_transcript.txt  hackathon_planning1.txt  hackathon_planning2.txt  make_graph_embeddings.ipynb  meeting to record with rob .vtt
memory-bank/: activeContext.md  progress.md  systemPatterns.md  techContext.md
scripts/: 01_fetch_onet.py  02_generate_employees.py  03_build_graph_csv.py  04_neo4j_import.py  05_embed_chunks.py  06_smoke_test.py  build_iceberg_tables.md  convert_to_parquet.md  export_graph_csv.md  fetch_datasets.md  neo4j_bulk_import.md  run_pipeline.py  tasks.ps1  test_genesis_connection.py  validate_env.py
src/: config.py
tests/: test_api_models.py  test_hybrid_retriever.py  test_quality_checks.py  test_scoring_aggregator.py
(+66 files in other folders)
